# llm-werewolf

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tox.ini
.agents/skills/fix-review/: SKILL.md
.agents/skills/implement-issue/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.claude/rules/: bash.md  domain.md  engine.md  git.md  layers.md  python.md  templates.md  tests.md
.claude/skills/analyze-benchmark/: SKILL.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/fix-review/: SKILL.md
.claude/skills/implement-issue/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/review-ui/: SKILL.md
.claude/skills/run-benchmark/: SKILL.md
.claude/skills/update-review-pr-skill/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  game-rules.md  glossary.md
scripts/: benchmark.py  capture_ui.py
src/llm_werewolf/: __main__.py  main.py  session.py
src/llm_werewolf/domain/: __init__.py  game.py  game_log.py  player.py  services.py  value_objects.py
src/llm_werewolf/engine/: __init__.py  action_provider.py  game_engine.py  game_logic.py  game_master.py  llm_config.py  (+6 more)
tests/: conftest.py  test_benchmark.py  test_debug_mode.py  test_interactive_session.py  test_main.py  test_random_mode.py  test_session.py
tests/domain/: test_ability_constraints.py  test_game.py  test_game_log.py  test_player.py  test_services.py  test_value_objects.py
tests/engine/: test_game_engine.py  test_game_logic.py  test_game_master.py  test_interactive_engine.py  test_llm_config.py  test_llm_full_game_integration.py  test_llm_provider.py  test_llm_provider_integration.py  test_logging_config.py  test_metrics.py  test_parallel_execution.py  test_prompts.py  test_random_provider.py  test_response_parser.py
(+7 files in other folders)
