[project]
name = "llm-werewolf"
version = "0.1.0"
description = "AI人狼ゲーム — 1人のプレイヤーが4体のAIと人狼を遊ぶWebアプリ"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "python-multipart>=0.0.22",
    "tqdm",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "httpx",
    "tox",
    "tox-uv",
    "pytest-timeout",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_werewolf"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 実 API を呼び出す結合テスト (OPENAI_API_KEY 必須)",
]
